# cammpweek2025

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: docs.yml
data/processed/: points_of_interest.parquet  roads.parquet
data/raw/: export-2.csv  query-2.overpassql
output/: lines.html
src/cammpweek2025/: plot.py  preprocess_data.py
src/cammpweek2025/utils/: logger.py
tests/: __init__.py  test_true.py
