[project]
name = "cammpweek2025"
version = "0.1.0"
description = ""
authors = [
    { name = "Thomas Camminady", email = "0milieux_member@icloud.com" }
]
readme = "README.md"
repository = "https://github.com/thomascamminady/cammpweek2025"
homepage = "https://github.com/thomascamminady/cammpweek2025"
documentation = "https://thomascamminady.github.io/cammpweek2025"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.0",
    "folium>=0.19.5",
    "geopandas>=1.0.1",
    "matplotlib>=3.10.1",
    "polars>=1.26.0",
    "polarspiper>=0.4.0",
    "pyarrow>=19.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.14.1",
    "pylint>=3.3.3",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "regex>=2024.11.6",
    "rich>=13.9.4",
]

[tool.ruff]
lint.ignore = [
    "D100",
    "D101",
    "D103",
    "D104",
    "D401",
    "E501",
]
lint.select = [
    "B",
    "B9",
    "C",
    "D",
    "E",
    "F",
    "N",
    "S",
    "W",
    "I001",
]
line-length = 80

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"**/__init__.py" = [
    "D200",
    "D400",
]

[tool.pylint.MASTER]
disable=[
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
]

[tool.pyright]
exclude = [
    ".venv/*",
    ".mypy_cache/*",
    ".pytest_cache/*",
    ".ruff_cache/*",
    ".ipynb_checkpoints/*",
    ".git/*",
    ".github/*",
    "**/__pycache__/*",
    "**/*.pyc",
]
